--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@babel/parser": "^7.25.7",
     "@babel/traverse": "^7.25.7",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "csslint": "^1.0.5",
     "dotenv": "^16.4.5",
@@ -26,6 +27,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "stylelint-config-standard": "^36.0.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
